--- a/chart/syntasa/templates/syntasa-execution-service-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-execution-service-deployment.yaml
@@ -16,6 +16,15 @@ spec:
     spec:
       containers:
       - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_execution_service.image_name }}:{{ .Values.global.image.tag }}"
+        command:
+        - sh
+        - -c
+        - "/bin/sh <<'EOF'\n  \n  apk add curl\n  export BROKER_EXTERNAL_HOSTNAME=$(curl
+          -H \"Metadata-Flavor: Google\" http://metadata.google.internal/computeMetadata/v1/instance/hostname)\n
+          \ export EXECUTION_SERVICE_EXTERNAL_KAFKA_BROKER=\"${BROKER_EXTERNAL_HOSTNAME}:31094\"\n
+          \ echo \"EXECUTION_SERVICE_EXTERNAL_KAFKA_BROKER $EXECUTION_SERVICE_EXTERNAL_KAFKA_BROKER\"\n
+          \ echo \"${EXECUTION_SERVICE_EMAIL_MESSAGE}\" > /opt/syntasa/email_template.txt\n
+          \ java -jar /opt/syntasa/service/syntasa-execution-service.jar\n\nEOF\n"
         name: {{ .Values.container_metadata.syntasa_execution_service.name }}
         imagePullPolicy: Always
         env:
