--- a/chart/syntasa/templates/syntasa-infrastructure-service-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-infrastructure-service-deployment.yaml
@@ -23,6 +23,7 @@ spec:
             export INFRASTRUCTURE_SERVICE_CLUSTER_NAME=$(curl -s http://metadata/computeMetadata/v1/instance/attributes/cluster-name -H 'Metadata-Flavor:Google');
             echo "Found Cluster with Name - ${INFRASTRUCTURE_SERVICE_CLUSTER_NAME}";
             echo "Finished!"
+            exec /opt/run;
         name: {{ .Values.container_metadata.syntasa_infrastructure_service.name }}
         imagePullPolicy: {{ .Values.global.image.pullPolicy }}
         ports:
