--- a/chart/syntasa/templates/application.yaml
+++ b/chart/syntasa/templates/application.yaml
@@ -24,27 +24,46 @@ spec:
       - "syntasa"
       - "k8s"
     description: |-
-      SYNTASA is a Machine Learning and Data Analytics Platform that helps Engineers, Data Scientists, and Analysts
-      prepare, process, learn, and deliver analysis into customer data sets.  These datasets can consist of any type
-      of data including web log data, clickstream data and CRM data.
+      The Syntasa platform enables digital teams to ingest their first-party digital data, combine it with their
+      internal customer data at the individual level, build custom AI/ML models, and activate them across digital channels.
+      Our self-service web application enables digital teams to build the data pipelines, custom AI/ML models,
+      and activations they need to deliver world-class digital experiences. Advanced users can use their preferred
+      data science tools (like notebooks, R, and Python) to build their own models and easily put them into production
+      with our platform. We offer pre-built adaptors to integrated with: martech systems like Adobe Analytics,
+      Google Analytics 360, Adobe Target, Optimizely, Adobe Campaign, Marketo, Eloqua, and Salesforce; adtech systems
+      like Adobe Audience Manager, Google Audience 360, Google Ad Center, Facebook Ads, Twitter Ads, LinkedIn Ads,
+      DoubleClick Manager, Google Display & Video 360, and Nielsen; and cloud data platforms like BigQuery,
+      RedShift, HD Insight, Snowflake, and Qubole.
 
       # Getting Started
-      Please visit the SYNTASA website to learn how to register a new License Key
-        - Placeholder for License Key Retrieval
+      Please visit the following guide to get started:
+      https://help.syntasa.com/hc/en-us/articles/360003406618-Syntasa-Introduction
 
       # Next Steps
-      After acquiring a License please, please visit the SYNTASA GCP Kubernetes Markplace Documentation to see how
-      to get started with SYNTASA.
+      After Deploying the SYNTASA application in Google Marketplace on a GKE cluster, please visit the "Services and Ingresses"
+      page and head towards the IP pointed to by the 'syntasa-ingress' service.  Additionally If you used a static ip,
+      the endpoint should be in the format:
+
+      https://<your ip>
+
+      Please allow some time for the application to load.
 
       # Terms of Service
         - Placeholder for Terms of Service
 
-      #Support
-      For support please reach out to devops@syntasa.com or contact #
+      # Support
+      For support please reach out to support@syntasa.com
+      Additionally please see the links below for any additional technical guidance.
 
     links:
       - description: SYNTASA Website
         url: "https://www.syntasa.com"
+      - description: SYNTASA Marketplace Documentation
+        url: "https://github.com/syntasa-dev/syntasa-google-marketplace"
+      - description: SYNTASA Prerequisited
+        url: "https://github.com/syntasa-dev/syntasa-google-marketplace/blob/master/docs/PREREQUISITES.md"
+      - description: SYNTASA HELM On-Prem Deployment
+        url: "https://github.com/syntasa-dev/syntasa-google-marketplace/blob/master/docs/HELM_INSTALLATION.md"
   selector:
     matchLabels:
       app.kubernetes.io/name: "{{ .Release.Name }}"
@@ -61,5 +80,3 @@ spec:
       kind: Ingress
     - group: v1
       kind: PersistentVolumeClaim
-#   - group: v1
-#     kind: PersistentVolume
