Documentation Changes - Internal Review

--- a/chart/syntasa/Chart.yaml
+++ b/chart/syntasa/Chart.yaml
@@ -10,3 +10,7 @@ sources:
 maintainers:
   - name: Kaushik Vinjamuri
     email: kaushik.vinjamuri@syntasa.com
+  - name: Pradeepraj Chandrasekaran
+    email: pradeepraj.chandrasekaran@syntasa.com
+  - name: Sarath Botlagunta
+    email: sarath.botlagunta@syntasa.com
