--- a/chart/syntasa/templates/application.yaml
+++ b/chart/syntasa/templates/application.yaml
@@ -47,7 +47,7 @@ spec:
       https://github.com/syntasa-dev/syntasa-google-marketplace#accessing-the-syntasa-application-ui
 
       # Terms of Service
-        - Placeholder for Terms of Service
+      Please refer to the SYNTASA licensing agreement
 
       # Support
       For support please reach out to support@syntasa.com
