--- a/chart/syntasa/templates/syntasa-common-configmap.yaml
+++ b/chart/syntasa/templates/syntasa-common-configmap.yaml
@@ -59,7 +59,7 @@ data:
   syntasa_infrastructure_service_security_group: ""
   syntasa_infrastructure_emrfs_cv_enabled: "false"
   syntasa_infrastructure_emrfs_cv_props: "fs.s3.consistent:true,fs.s3.consistent.metadata.read.capacity:400,fs.s3.consistent.metadata.write.capacity:100"
-  syntasa_infrastructure_rundeck_url: "http://{{ .Values.static_ip_address }}/rundeck"
+  syntasa_infrastructure_rundeck_url: "https://{{ .Values.static_ip_address }}/rundeck"
   syntasa_infrastructure_service_account: "{{ .Values.infrastructure_service_account }}"
 
   syntasa_auth_client_id: ""
