--- a/chart/syntasa/templates/syntasa-alert-service-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-alert-service-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: {{ .Values.container_metadata.syntasa_alert_service.name }}
     spec:
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_alert_service.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaAlertServiceImage }}"
         name: syntasa-alert-service
         imagePullPolicy: Always
         env:
