--- a/chart/syntasa/templates/syntasa-app-apigateway-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-app-apigateway-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         secret:
           secretName: syntasa-key
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_app_apigateway.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaAppApigatewayImage }}"
         name: {{ .Values.container_metadata.syntasa_app_apigateway.name}}
         imagePullPolicy: Always
         env:
