--- a/chart/syntasa/templates/syntasa-app-appdatagateway-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-app-appdatagateway-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         secret:
           secretName: syntasa-key
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_app_appdatagateway.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaAppAppdatagatewayImage }}"
         name: {{ .Values.container_metadata.syntasa_app_appdatagateway.name}}
         imagePullPolicy: Always
         env:
