--- a/chart/syntasa/templates/syntasa-app-platform-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-app-platform-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         secret:
           secretName: syntasa-key
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_app_platform.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaAppPlatformImage }}"
         name: {{ .Values.container_metadata.syntasa_app_platform.name }}
         imagePullPolicy: Always
         env:
