--- a/chart/syntasa/templates/syntasa-composer-service-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-composer-service-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       serviceAccountName: {{ .Values.syn_kube_service_account }}
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_composer_service.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaComposerServiceImage }}"
         name: {{ .Values.container_metadata.syntasa_composer_service.name }}
         imagePullPolicy: Always
         env:
