--- a/chart/syntasa/templates/syntasa-execution-service-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-execution-service-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: {{ .Values.container_metadata.syntasa_execution_service.name }}
     spec:
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_execution_service.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaExecutionServiceImage }}"
         command:
         - sh
         - -c
