--- a/chart/syntasa/templates/syntasa-job-management-service-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-job-management-service-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: {{ .Values.container_metadata.syntasa_job_management_service.name }}
     spec:
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_job_management_service.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaJobManagementServiceImage }}"
         name: {{ .Values.container_metadata.syntasa_job_management_service.name }}
         imagePullPolicy: Always
         env:
