--- a/chart/syntasa/templates/syntasa-kafka-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-kafka-deployment.yaml
@@ -22,7 +22,7 @@ spec:
       serviceAccountName: {{ .Values.syn_kube_service_account }}
       containers:
       - name: {{ .Values.container_metadata.kafka.name }}
-        image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.kafka.image_name }}:{{ .Values.global.image.tag }}"
+        image: "{{ .Values.kafkaImage }}"
         imagePullPolicy: {{ .Values.global.image.pullPolicy }}
         command:
          - sh
@@ -99,7 +99,7 @@ spec:
                 name: {{ .Values.global.configMap.name }}
                 key: syntasa_kafka_topics
       - name: {{ .Values.container_metadata.zookeeper.name }}
-        image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.zookeeper.image_name }}:{{ .Values.global.image.tag }}"
+        image: "{{ .Values.zookeeperImage }}"
         imagePullPolicy: {{ .Values.global.image.pullPolicy }}
         env:
           - name: ZOOKEEPER_CLIENT_PORT
