--- a/chart/syntasa/templates/syntasa-mlflow-service-deployment.yml
+++ b/chart/syntasa/templates/syntasa-mlflow-service-deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       serviceAccountName: {{ .Values.syn_kube_service_account }}
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_mlflow_service.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaMlflowServiceImage }}"
         name: {{ .Values.container_metadata.syntasa_mlflow_service.name }}
         imagePullPolicy: Always
         env:
