--- a/chart/syntasa/templates/syntasa-runtime-service-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-runtime-service-deployment.yaml
@@ -20,7 +20,7 @@ spec:
         secret:
           secretName: syntasa-key
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_runtime_service.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaRuntimeServiceImage }}"
         command: ["/bin/sh", "-c"]
         args:
           - echo "Getting Kubernetes Cluster Name";
