--- a/chart/syntasa/templates/syntasa-state-service-deployment.yaml
+++ b/chart/syntasa/templates/syntasa-state-service-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: {{ .Values.container_metadata.syntasa_state_service.name }}
     spec:
       containers:
-      - image: "{{ .Values.global.image.repository }}/{{ .Values.container_metadata.syntasa_state_service.image_name }}:{{ .Values.global.image.tag }}"
+      - image: "{{ .Values.syntasaStateServiceImage }}"
         name: {{ .Values.container_metadata.syntasa_state_service.name }}
         imagePullPolicy: Always
         env:
